--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,9 @@
 	"license": "ISC",
 	"type": "commonjs",
 	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.1",
+		"@mui/material": "^7.3.2",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.2",
 		"express": "^5.1.0",
