--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,8 @@
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.1",
 		"@mui/material": "^7.3.2",
+		"axios": "^1.12.2",
+		"cheerio": "^1.1.2",
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.2",
 		"express": "^5.1.0",
